src/test/ui/type-alias-enum-variants/type-alias-enum-variants-priority-3.rs
enum E {
    V
}

fn check() -> <E>::V {}
//~^ ERROR expected type, found variant `V`

fn main() {}
